--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "parcel src/index.html"
+    "watch": "parcel src/index.html",
+    "deploy": "npm-run-all deploy:*",
+    "deploy:parcel-build": "parcel build --public-url ./ src/index.html --out-dir build",
+    "deploy:push-gh-page": "push-dir --dir=build --branch=gg-pages --cleanup --verbose",
+    "deploy:cleanup": "rm -rf build"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
